--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "CommonJS",                        
-    "outDir": "./build",                        
-    "rootDir": "./",                  
-    "strict": false,                           
-    "esModuleInterop": true,                
+    "module": "CommonJS",
+    "outDir": "./build",
+    "rootDir": "./",
+    "strict": false,
+    "esModuleInterop": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true  
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/*", "src/*/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "dist", "build"]
 }
