modified code logic for my purpose

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,20 @@
-websiteURL=
-email=
-password=
-scrollCount=1
+EMAIL=abc@gmail.com
+PASSWORD=abc
+
+# Input/Output Configuration
+INPUT_CSV=input/urls.csv
+OUTPUT_DIR=output
+
+# Auto-Scroll Settings
+MAX_SCROLL_ATTEMPTS=100
+NO_NEW_CONTENT_LIMIT=5
+
+# Performance Settings
+CHECKPOINT_INTERVAL=50
+BROWSER_RESTART_INTERVAL=200
+
+# Error Handling
+MAX_RETRIES=1
+TIMEOUT_SECONDS=120
+CONTINUE_ON_ERROR=true
+
